--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server =TOANDANG\\TOANDANG; Database = website ; Trusted_Connection=True;MultipleActiveResultSets=True"
+  }
 }
