--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server =TOANDANG\\TOANDANG; Database = website ; Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
+  "MailSettings": {
+    "Mail": "19522357@gm.uit.edu.vn",
+    "DisplayName": "ToanDang",
+    "Password": "123",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
