--- a/appsettings.json
+++ b/appsettings.json
@@ -11,9 +11,9 @@
     "DefaultConnection": "Server =TOANDANG\\TOANDANG; Database = website ; Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "MailSettings": {
-    "Mail": "19522357@gm.uit.edu.vn",
+    "Mail": "toandang.net@gmail.com",
     "DisplayName": "ToanDang",
-    "Password": "123",
+    "Password": "toan123789",
     "Host": "smtp.gmail.com",
     "Port": 587
   }
