Undo appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server =DESKTOP-8E3A1DA; Database = website ; Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server =TOANDANG\\TOANDANG; Database = website ; Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "MailSettings": {
     "Mail": "toandang.net@gmail.com",
