--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -16,5 +16,15 @@
     "Password": "toan123789",
     "Host": "smtp.gmail.com",
     "Port": 587
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "630581971738-uni2qf4434l6h7qkh0drhmt4p4m7vhnb.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    },
+    "Facebook": {
+      "AppId": "278285567527216",
+      "AppSecret": "62199afb8fed7a31a7ee3298545e2bb9"
+    }
   }
 }
