--- a/WEB2.csproj
+++ b/WEB2.csproj
@@ -36,4 +36,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="mailssave\" />
+  </ItemGroup>
+
 </Project>
