--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server = <tên connection>; Database = website ; Trusted_Connection=True;MultipleActiveResultSets=True"
-  },
+    "DefaultConnection": "Server = TOANDANG\\TOANDANG; Database = website ; Trusted_Connection=True;MultipleActiveResultSets=True"
+  },  
   "MailSettings": {
     "Mail": "toandang.net@gmail.com",
     "DisplayName": "ToanDang",
