--- a/appsettings.json
+++ b/appsettings.json
@@ -31,6 +31,7 @@
         "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
         "TmnCode": "GHHNT2HB",
         "HashSecret": "BAGAOHAPRHKQZASKQZASVPRSAKPXNYXS",
-        "Returnurl": "https://localhost:44357/orders/PaymentConfirm"
+        "Returnurl": "https://localhost:44357/orders/PaymentConfirm",
+        "Returnurlpur": "https://localhost:44357/admin/purchases/paymentconfirm",
     },
 }
