--- a/WEB2.csproj
+++ b/WEB2.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.1.2" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.14.0" />
+    <PackageReference Include="EPPlus" Version="5.8.4" />
     <PackageReference Include="jQuery" Version="3.6.0" />
     <PackageReference Include="MailKit" Version="2.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
