update nhiều nhiều nhìu

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,13 +7,13 @@
         }
     },
     "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server = DESKTOP-Q1M743G; Database = website2 ; Trusted_Connection=True;MultipleActiveResultSets=True"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server = TOANDANG\\TOANDANG; Database = website ; Trusted_Connection=True;MultipleActiveResultSets=True"
+    },
     "MailSettings": {
         "Mail": "toandang.net@gmail.com",
         "DisplayName": "ToanDang",
-        "Password": "toan123789",
+        "Password": "!1@2#3asd",
         "Host": "smtp.gmail.com",
         "Port": 587
     },
